--- a/index.html
+++ b/index.html
@@ -1,22 +1,70 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Page Title</title>
-    </head>
-    <body>
-    <table >
-         <table border=0>
-           <tr style="font-size:30px;">
-  <td style="width:10%" colspan="2"> <center><b>Hello my name is Dibyanshu</b></center></td>
-           </tr> 
-           <tr style="height:200px;">
-               <td  colspan="2"></td>
-           </tr>
-           <tr>
-           <th style="font-size:20px;">About:-</th>
-           <td><b>this page is only for testing and not completed.</b>(<i>so please stay with this page</i>)</td>
-           </tr>
-         </table>  
-         </table>
-    </body>
-</html>
+<!-- wp:media-text {"align":"full","mediaPosition":"right","mediaId":21,"mediaLink":"https://rathdibyanshu.wordpress.com/?attachment_id=21","mediaType":"image","backgroundColor":"background-light","className":"a8c-section"} -->
+DIBYANSHU RATH
+<div class="wp-block-media-text alignfull has-media-on-the-right is-stacked-on-mobile a8c-section has-background-light-background-color has-background"><figure class="wp-block-media-text__media"><img src="https://rathdibyanshu.files.wordpress.com/2022/07/pexels-lamourart-6831962.jpg?w=1024" alt="" class="wp-image-21 size-full"/></figure><div class="wp-block-media-text__content"><!-- wp:jetpack/layout-grid {"column1DesktopSpan":9,"column1DesktopOffset":1,"column1TabletSpan":8,"column1MobileSpan":4,"column2DesktopOffset":3,"className":"alignfull column1-desktop-grid__span-9 column1-desktop-grid__start-2 column1-desktop-grid__row-1 column1-tablet-grid__span-8 column1-tablet-grid__row-1 column1-mobile-grid__span-4 column1-mobile-grid__row-1"} -->
+  <div class="wp-block-jetpack-layout-grid alignfull column1-desktop-grid__span-9 column1-desktop-grid__start-2 column1-desktop-grid__row-1 column1-tablet-grid__span-8 column1-tablet-grid__row-1 column1-mobile-grid__span-4 column1-mobile-grid__row-1"><!-- wp:jetpack/layout-grid-column -->
+  <div class="wp-block-jetpack-layout-grid-column wp-block-jetpack-layout-grid__padding-none"><!-- wp:heading {"className":"a8c-section-title"} -->
+  <h2 class="a8c-section-title">Hey there!</h2>
+  <!-- /wp:heading -->
+  
+  <!-- wp:paragraph {"className":"a8c-section-text"} -->
+  <p class="a8c-section-text"><strong>my name is Dibyanshu and this is my first web page . its not fully completed so please stay with me.</strong></p>
+  <!-- /wp:paragraph -->
+  
+  <!-- wp:heading {"level":6,"className":"a8c-section-link-text"} -->
+  <h6 class="a8c-section-link-text"><em>click here for more ? <a href="#">Start here</a></em></h6>
+  <!-- /wp:heading --></div>
+  <!-- /wp:jetpack/layout-grid-column --></div>
+  <!-- /wp:jetpack/layout-grid --></div></div>
+  <!-- /wp:media-text -->
+  
+  <!-- wp:spacer {"height":"32px"} -->
+  <div style="height:32px" aria-hidden="true" class="wp-block-spacer"></div>
+  <!-- /wp:spacer -->
+  
+  <!-- wp:heading -->
+  <h2>From the blog</h2>
+  <!-- /wp:heading -->
+  
+  <!-- wp:spacer {"height":"32px"} -->
+  <div style="height:32px" aria-hidden="true" class="wp-block-spacer"></div>
+  <!-- /wp:spacer -->
+  
+  <!-- wp:jetpack/layout-grid {"column1DesktopSpan":7,"column1TabletSpan":8,"column1MobileSpan":4,"column2DesktopOffset":5,"className":"alignfull column1-desktop-grid__span-7 column1-desktop-grid__row-1 column1-tablet-grid__span-8 column1-tablet-grid__row-1 column1-mobile-grid__span-4 column1-mobile-grid__row-1"} -->
+  <div class="wp-block-jetpack-layout-grid alignfull column1-desktop-grid__span-7 column1-desktop-grid__row-1 column1-tablet-grid__span-8 column1-tablet-grid__row-1 column1-mobile-grid__span-4 column1-mobile-grid__row-1"><!-- wp:jetpack/layout-grid-column -->
+  <div class="wp-block-jetpack-layout-grid-column wp-block-jetpack-layout-grid__padding-none"><!-- wp:paragraph -->
+  <p>Thanks for your supporting</p>
+  <!-- /wp:paragraph --></div>
+  <!-- /wp:jetpack/layout-grid-column --></div>
+  <!-- /wp:jetpack/layout-grid -->
+  
+  <!-- wp:media-text {"align":"full","mediaId":44,"mediaType":"image","backgroundColor":"background-light","className":"a8c-section"} -->
+  <div class="wp-block-media-text alignfull is-stacked-on-mobile a8c-section has-background-light-background-color has-background"><figure class="wp-block-media-text__media"><img src="https://bowenstarterdesign.files.wordpress.com/2020/07/alexa-williams-p3sud9shvbi-unsplash.jpg?w=1024" alt="" class="wp-image-44 size-full"/></figure><div class="wp-block-media-text__content"><!-- wp:jetpack/layout-grid {"column1DesktopSpan":9,"column1DesktopOffset":1,"column1TabletSpan":8,"column1MobileSpan":4,"column2DesktopOffset":3,"className":"alignfull column1-desktop-grid__span-9 column1-desktop-grid__start-2 column1-desktop-grid__row-1 column1-tablet-grid__span-8 column1-tablet-grid__row-1 column1-mobile-grid__span-4 column1-mobile-grid__row-1"} -->
+  <div class="wp-block-jetpack-layout-grid alignfull column1-desktop-grid__span-9 column1-desktop-grid__start-2 column1-desktop-grid__row-1 column1-tablet-grid__span-8 column1-tablet-grid__row-1 column1-mobile-grid__span-4 column1-mobile-grid__row-1"><!-- wp:jetpack/layout-grid-column -->
+  <div class="wp-block-jetpack-layout-grid-column wp-block-jetpack-layout-grid__padding-none"><!-- wp:heading {"level":4,"className":"a8c-section-title"} -->
+  <h4 class="a8c-section-title">About Me</h4>
+  <!-- /wp:heading -->
+  
+  <!-- wp:paragraph {"className":"a8c-section-text"} -->
+  <p class="a8c-section-text"><mark style="background-color:rgba(0, 0, 0, 0);color:#19bbe9;" class="has-inline-color">I am a student of scs collage . and also intrested in information technology</mark></p>
+  <!-- /wp:paragraph -->
+  
+  <!-- wp:heading {"level":4,"className":"a8c-section-subtitle"} -->
+  <h4 class="a8c-section-subtitle">Let's hang out</h4>
+  <!-- /wp:heading -->
+  
+  <!-- wp:buttons -->
+  <div class="wp-block-buttons"><!-- wp:button -->
+  <div class="wp-block-button"><a class="wp-block-button__link wp-element-button" href="https://www.instagram.com/dibyanshu011">CONTACT US</a></div>
+  <!-- /wp:button --></div>
+  <!-- /wp:buttons -->
+  
+  <!-- wp:paragraph -->
+  <p></p>
+  <!-- /wp:paragraph --></div>
+  <!-- /wp:jetpack/layout-grid-column --></div>
+  <!-- /wp:jetpack/layout-grid --></div></div>
+  <!-- /wp:media-text -->
+  
+  <!-- wp:paragraph -->
+  <p></p>
+  <!-- /wp:paragraph -->
